<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Path of Exile Racer</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="unknown">Unknown</string>
    <string name="starting_in">Starting in</string>
    <string name="in_progress">In Progress</string>
    <string name="finished">Finished</string>
    <string name="refresh">Refresh</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="watch_character">Watch Character</string>
    <string name="open">OPEN</string>
    <string name="closed">CLOSED</string>
    <string name="started">STARTED</string>
    <string name="races">Races</string>
    <string name="error_unavailable">Unable to connect to the Path of Exile server.</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="remaining">Remaining</string>
    <string name="ladder">Ladder</string>
    <string name="name">Name</string>
    <string name="watch">Watch</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="settings">Settings</string>
    <string name="character_not_found">Unable to find character: %1$s</string>
    <string name="forum_post">Forum Post</string>
    <string name="no_rankings">No rankings yet</string>
    <string name="no_forum_post">A forum post has not been created for this race yet</string>
    <string name="auto_refresh">Auto Refresh</string>
    <string name="all">All</string>
    <string name="watcher_input_error">Character names may only contain alphabetic keys and underscores.</string>
    <string name="notification">Notification</string>
    <string name="add_notification">Add Notification</string>
    <string name="remove_notification">Remove Notification</string>
    <string name="error_parse">An error occurred while attempting to parse the dates.</string>
    <string name="races_unavailable">No races yet.</string>
    <string name="upcoming">Upcoming</string>
    <string name="expand_all">Expand All</string>
    <string name="collapse_all">Collapse All</string>
    <string name="starts_at">Starts at %1$s</string>
    <string name="notification_scheduled">Notification scheduled for %1$s %2$s</string>
    <string name="notification_dialog_message1">Notify me</string>
    <string name="notification_dialog_message2">minutes before the race starts.</string>
    <string name="add">Add</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="settings_keepscreenon_summary">Prevents your screen from going to sleep while viewing a ladder.</string>
    <string name="settings_autorefresh_summary">Automatically updates the ladder every 30 seconds while viewing a ladder.</string>
    <string name="character">Character</string>
    <string name="account">Account</string>
    <string name="list">List</string>
    <string name="calendar">Calendar</string>

    <!-- Below needs to be translated to German -->
    <string name="alarm">Alarm</string>
    <string name="favorite">Favorite</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="second">second</string>
    <string name="seconds">seconds</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="week">week</string>
    <string name="weeks">weeks</string>
    <string name="favorites">Favorites</string>
    <string name="alarms">Alarms</string>
    <string name="notification_title">Upcoming race</string>
    <string name="notification_message">%1$s will begin at %2$s.</string>

</resources>