<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:support="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_watch_character"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom"
        android:title="@string/watch_character"
        support:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_keep_screen_on"
        android:checkable="true"
        android:showAsAction="never"
        android:title="@string/keep_screen_on"
        support:showAsAction="never"/>
    <item
        android:id="@+id/menu_auto_refresh"
        android:checkable="true"
        android:showAsAction="never"
        android:title="@string/auto_refresh"
        support:showAsAction="never"/>

</menu>